--- a/CBSetoLib/CBSetoLib.csproj
+++ b/CBSetoLib/CBSetoLib.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Timezones.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Timezones.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
 
